# RelayBoard

./: README.md
EAGLE/: RelayBoard.brd  RelayBoard.sch
Firmware/: METADATA  MemoryMap.txt  Protocol.txt
Firmware/Bootloader/: .cproject  .mxproject  Bootloader.ioc  STM32L412KBTX_FLASH.ld
Firmware/Bootloader/Core/Inc/: main.h  stm32l4xx_hal_conf.h
Firmware/Bootloader/Core/Src/: main.c
Firmware/Bootloader/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
Firmware/Bootloader/User/: assert.cpp  assert.h  config.h  relaybootloader.cpp  relaybootloader.h  usermain.cpp  usermain.h
Firmware/Bootloader/User/bootloader/: programmer.cpp
Firmware/Common/: assert.cpp  assert.h  defaultstring.h  hostinterface.cpp  hostinterface.h  mktime.py  staticstring.h
Firmware/RelayBoard/: .cproject  .project  RelayBoard.ioc  STM32L412KBTX_FLASH.ld
Firmware/RelayBoard/Core/Inc/: main.h
Firmware/RelayBoard/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  system_stm32l4xx.c
Firmware/RelayBoard/USB_DEVICE/App/: usbd_desc.c
Firmware/RelayBoard/User/: config.h  defaultstring.h  ina226.cpp  ina226.h  powermonitor.cpp  powermonitor.h  relayboard.cpp  relayboard.h  relaymanager.cpp  relaymanager.h  usermain.cpp  usermain.h  userpage.cpp  userpage.h
LabVIEW/: Test.vi
LabVIEW/IRB/x86_32/: IRB.lvlib  dir.mnu
LabVIEW/IRB/x86_32/SubVI/: Error Converter (ErrCode or Status).vi
LabVIEW/IRB/x86_32/VIs/: CloseDevice.vi  GetBuildTimestamp.vi  GetFaultMask.vi  GetFirmwareVersion.vi  GetHardwareVersion.vi  GetLastError.vi  GetPowerLimit.vi  GetRelayPower.vi  GetRelayState.vi  GetSerialNumber.vi  GetStateMask.vi  OpenDevice.vi  ResetDevice.vi  SavePowerLimits.vi  SetPowerLimit.vi  SetRelayState.vi  SetStateMask.vi  dir.mnu
Software/FirmwareUpdater/: FirmwareUpdater.pro  FirmwareUpdater.qrc  aboutdialog.cpp  aboutdialog.ui  component.cpp  component.h  componentfactory.cpp  componentfactory.h  device.h  main.cpp  mainwindow.cpp  mainwindow.h  serialport.h  serialportwidget.cpp  serialportwidget.h  serialportwidget.ui
Software/FirmwareUpdater/keys/: isf.pem  isf.pub.pem
Software/FirmwareUpdater/repository/: makeall.sh
Software/RelayBoard/: RelayBoard.pro  aboutdialog.h  aboutdialog.ui  limitsdialog.cpp  limitsdialog.h  limitsdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  maskwidget.cpp  maskwidget.h  maskwidget.ui  serialportwidget.cpp  serialportwidget.h  serialportwidget.ui
Software/libIRB/: CMakeLists.txt  device.cpp  device.h  irb.cpp  serialport.cpp  serialport.h  test.c  test.cpp
Software/libIRB/include/: irb.h
